--- a/bartaz/css/impress-demo.css
+++ b/bartaz/css/impress-demo.css
@@ -60,7 +60,7 @@ table {
 
 
 body {
-    font-family: 'PT Sans', sans-serif;
+    /*font-family: 'PT Sans', sans-serif;*/
     
     min-height: 740px;
 
@@ -113,7 +113,7 @@ body     { pointer-events: none; }
     -o-box-sizing:      border-box;
     box-sizing:         border-box;
 
-    font-family: 'PT Serif', georgia, serif;
+    /*font-family: 'PT Serif', georgia, serif;*/
 
     font-size: 48px;
     line-height: 1.5;
@@ -154,6 +154,7 @@ body     { pointer-events: none; }
     opacity: 0;
     
     -webkit-transform: translateY(400px);
+    -webkit-transform: translate3d(0, 400px, 0);
     -moz-transform:    translateY(400px);
     -ms-transform:     translateY(400px);
     -o-transform:      translateY(400px);
@@ -176,6 +177,7 @@ body     { pointer-events: none; }
     transition:         opacity 1s 5s,         transform 0.5s;
     
     -webkit-transform: translateY(0px);
+    -webkit-transform: translate3d(0, 0px, 0);
     -moz-transform:    translateY(0px);
     -ms-transform:     translateY(0px);
     -o-transform:      translateY(0px);
@@ -195,6 +197,7 @@ body     { pointer-events: none; }
     left: 1.5em;
     
     -webkit-transform: translateZ(20px);
+    -webkit-transform: translate3d(0, 0, 20px);
     -moz-transform:    translateZ(20px);
     -ms-transform:     translateZ(20px);
     -o-transform:      translateZ(20px);
@@ -205,6 +208,7 @@ body     { pointer-events: none; }
     font-size: 190px;
     
     -webkit-transform: translateZ(50px);
+    -webkit-transform: translate3d(0,0,50px);
     -moz-transform:    translateZ(50px);
     -ms-transform:     translateZ(50px);
     -o-transform:      translateZ(50px);
@@ -257,6 +261,7 @@ body     { pointer-events: none; }
 
 #ing.present .positioning {
     -webkit-transform: translateY(-10px);
+    -webkit-transform: translate3d(0,-10px,0);
     -moz-transform:    translateY(-10px);
     -ms-transform:     translateY(-10px);
     -o-transform:      translateY(-10px);
@@ -331,6 +336,7 @@ body     { pointer-events: none; }
 #its-in-3d b {
     display: inline-block;
     -webkit-transform: translateZ(40px);
+    -webkit-transform: translate3d(0, 0, 40px);
     -moz-transform:    translateZ(40px);
     -ms-transform:     translateZ(40px);
     -o-transform:      translateZ(40px);
@@ -345,6 +351,7 @@ body     { pointer-events: none; }
 
 #its-in-3d .have {
     -webkit-transform: translateZ(-40px);
+    -webkit-transform: translate3d(0, 0, -40px);
     -moz-transform:    translateZ(-40px);
     -ms-transform:     translateZ(-40px);
     -o-transform:      translateZ(-40px);
@@ -353,6 +360,7 @@ body     { pointer-events: none; }
 
 #its-in-3d .you {
     -webkit-transform: translateZ(20px);
+    -webkit-transform: translateZ(0, 0, 20px);
     -moz-transform:    translateZ(20px);
     -ms-transform:     translateZ(20px);
     -o-transform:      translateZ(20px);
@@ -361,6 +369,7 @@ body     { pointer-events: none; }
 
 #its-in-3d .noticed {
     -webkit-transform: translateZ(-40px);
+    -webkit-transform: translateZ(0, 0, -40px);
     -moz-transform:    translateZ(-40px);
     -ms-transform:     translateZ(-40px);
     -o-transform:      translateZ(-40px);
@@ -369,6 +378,7 @@ body     { pointer-events: none; }
 
 #its-in-3d .its {
     -webkit-transform: translateZ(60px);
+    -webkit-transform: translate3d(0, 0, 60px);
     -moz-transform:    translateZ(60px);
     -ms-transform:     translateZ(60px);
     -o-transform:      translateZ(60px);
@@ -377,6 +387,7 @@ body     { pointer-events: none; }
 
 #its-in-3d .in {
     -webkit-transform: translateZ(-10px);
+    -webkit-transform: translate3d(0, 0,-10px);
     -moz-transform:    translateZ(-10px);
     -ms-transform:     translateZ(-10px);
     -o-transform:      translateZ(-10px);
@@ -387,6 +398,7 @@ body     { pointer-events: none; }
     font-size: 32px;
 
     -webkit-transform: translateZ(-10px);
+    -webkit-transform: translate3d(0, 0, -10px);
     -moz-transform:    translateZ(-10px);
     -ms-transform:     translateZ(-10px);
     -o-transform:      translateZ(-10px);
@@ -396,6 +408,7 @@ body     { pointer-events: none; }
 #its-in-3d.present span,
 #its-in-3d.present b {
     -webkit-transform: translateZ(0px);
+    -webkit-transform: translate3d(0, 0, 0px);
     -moz-transform:    translateZ(0px);
     -ms-transform:     translateZ(0px);
     -o-transform:      translateZ(0px);
@@ -439,7 +452,7 @@ body     { pointer-events: none; }
     box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
     border: 1px solid rgba(0, 0, 0, .3);
 
-    font-family: 'Open Sans', Arial, sans-serif;
+    /*font-family: 'Open Sans', Arial, sans-serif;*/
 
     color: rgb(102, 102, 102);
     text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
@@ -466,7 +479,7 @@ body     { pointer-events: none; }
 /* IMPRESS NOT SUPPORTED STYLES */
 
 .fallback-message {
-    font-family: sans-serif;
+    /*font-family: sans-serif;*/
     line-height: 1.3;
     
     display: none;
