--- a/InfoMotion.ui
+++ b/InfoMotion.ui
@@ -145,7 +145,10 @@
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
+     <enum>QFrame::NoFrame</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
     </property>
     <property name="text">
      <string>Frame N</string>
