--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -52,7 +52,7 @@ table {
     want to leave anybody behind.
 */
 body {
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Garamond', sans-serif;
     min-height: 580px;
 
     background: rgb(215, 215, 215);
@@ -107,7 +107,7 @@ a:focus {
 */
 
 .fallback-message {
-    font-family: sans-serif;
+    font-family: Garamond;
     line-height: 1.3;
 
     width: 780px;
@@ -145,7 +145,7 @@ a:focus {
     -o-box-sizing:      border-box;
     box-sizing:         border-box;
 
-    font-family: 'PT Serif', georgia, serif;
+    font-family: Garamond;
     font-size: 48px;
     line-height: 1.5;
 }
@@ -191,7 +191,7 @@ a:focus {
     color: rgb(102, 102, 102);
     text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
 
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: Garamond;
     font-size: 30px;
     line-height: 36px;
     letter-spacing: -1px;
